--- a/perencanaan-unsoed.html
+++ b/perencanaan-unsoed.html
@@ -990,7 +990,7 @@ h1, h2, h3, li {
             <div class="buttonjoin">
             <a href="https://hallodunia.xyz/short-org2/" rel="noopener noreferrer nofollow" class="buttonWrap buttong button-red contactSubmitButton"><i class="fa-solid fa-user-plus"></i> AKUN VVIP</a>
 
-            <p class="copyright">© 2025• <a style="color: #ffffff;" href="#">Slot Online</a> • All Rights Reserved.</p>
+            <p class="copyright">© 2025• <a style="color: #ffffff;" href="#">Slot Gacor</a> • All Rights Reserved.</p>
         </div>
             </div>
               </div>
