--- a/thai-sipadu-isi-ska.html
+++ b/thai-sipadu-isi-ska.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta content="Slot Thailand # Link Slot Gacor Server Luar Negeri Thailand Bet 200 Anti Rungkad Gampang Maxwin" property="og:title" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
-    <meta name="description" content="Slot Thaialnd hadir dengan link slot gacor server luar negeri Thailand yang menyediakan berbagai situs slot gacor bet 200 gampang maxwin anti rungkad hari ini. Slot gacor Thailand memudahkan setiap pemain slot online untuk mendapatkan kemenangan maxwin terbesar karena dengan slot server Thailand memiliki winrate kemenangan tertinggi untuk setiap game slot Thailand gacor terbaru." />
+    <meta name="description" content="Slot Thailand hadir dengan link slot gacor server luar negeri Thailand yang menyediakan berbagai situs slot gacor bet 200 gampang maxwin anti rungkad hari ini. Slot gacor Thailand memudahkan setiap pemain slot online untuk mendapatkan kemenangan maxwin terbesar karena dengan slot server Thailand memiliki winrate kemenangan tertinggi untuk setiap game slot Thailand gacor terbaru." />
     <meta name="robots" content="max-image-preview:large" />
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
