--- a/stecu-keselamatan.html
+++ b/stecu-keselamatan.html
@@ -227,8 +227,8 @@
       <!-- Added margin-top and margin-bottom to the banner image -->
       <div><amp-img src="https://kebetulankena.xyz/gambar/uploads/kebetulan/6885bc23569de_slot%20gacor%20hari%20ini.jpg" alt="SLOT GACOR" width="700" height="700" layout="responsive" class="banner"></amp-img></div>
       
-      <a href="https://cli.re/RequestAdmin" target="_blank" rel="noreferrer noopener" role="button" class="btn-daftar">TELEGRAM ADMIN</a>
-      <a href="https://cli.re/KontakAdmin" target="_blank" rel="noreferrer noopener" role="button" class="btn-login">WHATSAPP ADMIN</a>
+      <a href="https://rebrand.ly/g9ksvog" target="_blank" rel="noreferrer noopener" role="button" class="btn-daftar">TELEGRAM ADMIN</a>
+      <a href="https://rebrand.ly/g9ksvog" target="_blank" rel="noreferrer noopener" role="button" class="btn-login">WHATSAPP ADMIN</a>
 
       <p class="copyright">© 2025 • <a style="color: #ffffff;" href="https://keselamatan.unimap.edu.my/">SEOK3BETULAN</a> • All Rights Reserved 18+. </p>
     </div>
