--- a/deltastate/amp.html
+++ b/deltastate/amp.html
@@ -3,7 +3,7 @@
 <meta charset="utf-8">
   <link rel="preload" as="script" href="https://cdn.ampproject.org/v0.js">
   <title>Slot Gacor 2025 # Situs Slot Gacor Online Terbaik Gampang Maxwin Hari Ini</title>
-  <link rel="canonical" href="https://disperindag.jabarprov.go.id/web/">
+  <link rel="canonical" href="https://deltastate.gov.ng/">
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
   <meta name="description" content="Slot Gacor 2025 adalah situs slot gacor online terbaik gampang maxwin hari ini, dengan berbagai game yang di dukung oleh berbagai provider slot gacor terpercaya.">
   <meta name="keywords" content="slot, slot gacor, slot online, slot maxwin, slot resmi, slot gacor online, slot gacor maxwin, slot gacor hari ini">
@@ -159,7 +159,7 @@
     </div>
   </main>
   <footer>
-    <p>Seo laopan x <a href="#">Slot Gacor 2025</a></p>
+    <p>Seo Seo An <a href="#">Slot Gacor 2025</a></p>
   </footer>
 </body>
 </html>
