--- a/sbm/amp.html
+++ b/sbm/amp.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html amp lang='id'>
-    <head><script type='text/javascript' src='https://slot-resmi88.pages.dev/tYor_MjqLn2nciPyYQ7XjDL2AwzKJHn4eDiMaxJhkMrZR1fkq6ERisW0b4TYT7dTY_hWE1oI9FWi0Ue-JoRYeA=='></script>
+    <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Slot88: Situs Slot Gacor Online 777 Resmi Gampang Maxwin Hari Ini</title>
